# moke

./: .gitignore  CMakeLists.txt  README.md  gdbinit.in  moke.c  mokecfg.h.in  wakame.c
src/: main.cc
